# classify

./: CHANGELOG.md  Cargo.toml  README.md  index.html
.github/workflows/: publish.yml
jenks/: Cargo.toml
jenks/src/: main.rs
site/: index.js  package-lock.json  package.json
src/: equal_interval.rs  head_tail.rs  hinge.rs  jenks.rs  lib.rs  quantile.rs  standard_deviation.rs  utilities.rs  wasm.rs
