[package]
name = "classify"
version = "0.2.2"
authors = ["Nikhil Patel <pateln4002@gmail.com>"]
edition = "2021"
rust-version = "1.61"
description = "A collection of algorithms for categorizing 1D data"
readme = "README.md"
repository = "https://github.com/Nik4002/classify.git"
license = "MIT"
keywords = ["cartography", "jenks", "classification", "binning"]

[lib]
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
num-traits = "0.2"
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
getrandom = { version = "0.2.7", features = ["js"] }
serde = { version = "1.0.143", features = ["derive"] }

[features]
js = ["getrandom/js"]

